# stoned

./: Cargo.toml
.github/workflows/: release.yaml
asset-workspace/: Blackboard.glb  Epstein Armchair Test.blend  Epstein Armchair Test.blend1  assets-used.txt  room-test.blend  room-test.blend1  room.blend  room.blend1  room.glb  root-test.blend
assets/: EFTA00028716.pdf.blob  EFTA00329443.pdf.blob  EFTA00980008.pdf.blob  EFTA01683591.pdf.blob  EFTA01762434.pdf.blob  EFTA01930501.pdf.blob  k.wgsl  room.glb
assets/3D Assets/: Antichrist.glb  Bearcam.glb  Book Test.glb  Connector.glb  Epstein Armchair Test.blend  Epstein Desk.glb  Outlive.glb  Small Shelf without Shelfs.glb  Small shelf.glb  The Diversty Myth Peter Thiel.glb  Zero to One Peter Thiel.glb
assets/3D Assets/1990s_low_poly_camera/: Camera.glb  license.txt  scene.gltf
assets/3D Assets/Couch/: Couch2.glb  Source.txt
assets/3D Assets/PSX MED PACK by RETRO ASSETS LIBRARY/: Source.txt
assets/3D Assets/PSX MED PACK by RETRO ASSETS LIBRARY/PSX MED PACK by RETRO ASSETS LIBRARY/BLENDER/: PSX_MedKit.blend
assets/3D Assets/PSX MED PACK by RETRO ASSETS LIBRARY/PSX MED PACK by RETRO ASSETS LIBRARY/FBX/: Med_1.fbx  Med_10.fbx  Med_11.fbx  Med_12.fbx  Med_13.fbx  Med_14.fbx  Med_15.fbx  Med_16.fbx  Med_17.fbx  Med_18.fbx  Med_19.fbx  Med_2.fbx  Med_20.fbx  Med_3.fbx  Med_4.fbx  Med_5.fbx  Med_6.fbx  Med_7.fbx  Med_8.fbx  Med_9.fbx
assets/3D Assets/Victorian Props/: Malenias Pictures.glb  Picture 1.glb  Source for Credit.txt
assets/3D Assets/Victorian Props/lowpoly_victorian_props_with_customizable_psd/: license.txt
assets/3D Assets/book_row/: license.txt  scene.gltf
assets/Victorian Props/lowpoly_victorian_props_with_customizable_psd/: scene.gltf
src/: blob.rs  dialogue.rs  k.rs  main.rs  player.rs  utils.rs  widgets.rs
(+20 files in other folders)
