[package]
name = "stoned"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.18", features = ["bevy_ui_debug", "bevy_dev_tools", "webp"] }
bevy_enhanced_input = "0.23"

# physics
avian3d = { version = "0.6.0-rc.1", features = ["bevy_diagnostic", "diagnostic_ui", "validate"] }
avian_pickup = "0.5.0-rc.1"

# character controller
bevy_ahoy = "0.1.0-rc.1"

bevy_fix_cursor_unlock_web = "0.3.0"
bevy_framepace = { version = "0.21.0", git = "https://github.com/aevyrie/bevy_framepace" }
bevy_mod_mipmap_generator = { version = "0.1.0", git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
wasm-bindgen = "=0.2.108"
bevy_skein = "0.5.0"
bevy-inspector-egui = "0.36.0"
bevy_egui = "0.39.1"
js-sys = "0.3.85"
bevy_seedling = "0.7.0"
thiserror = "2.0.18"
bevy_easy_gif = "0.3.0"

[dependencies.web-sys]
version = "0.3.85"
features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "HtmlAnchorElement",
    "Url",
    "Window",
]

[package.metadata.bevy_cli.native.dev]
features = ["bevy/dev", "bevy/wayland"]

[package.metadata.bevy_cli.web]
default-features = false

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
